// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section component should render correctly 1`] = `
<DocumentFragment>
  <section
    class="section"
  />
</DocumentFragment>
`;

exports[`Section component should render dark appearance correctly 1`] = `
<DocumentFragment>
  <section
    class="section sectionDark"
  />
</DocumentFragment>
`;

exports[`Section component should render full mode correctly 1`] = `
<DocumentFragment>
  <section
    class="section sectionFull"
  />
</DocumentFragment>
`;

exports[`Section component should render light appearance correctly 1`] = `
<DocumentFragment>
  <section
    class="section sectionLight"
  />
</DocumentFragment>
`;
